--- a/source/_posts/科学上网教程之搬瓦工.md
+++ b/source/_posts/科学上网教程之搬瓦工.md
@@ -1,5 +1,504 @@
 ---
 title: 科学上网教程之搬瓦工
 date: 2018-10-21 16:18:28
-tags:
+tags:科学上网 | 翻墙 | 扶梯子 | VPS | Shadowsock | ss | VPN | 搬瓦工
 ---
+
+# 搬瓦工 VPS 搭建 SHADOWSOCKS （SS） 科学上网图文教程 #
+2018/10/21 星期日 18:13:32 
+
+----------
+
+
+# 前言  #
+
+> **搬瓦工**（bandwagonhost）是美国知名主机提供商 IT7 旗下的产品，在 VPS 界也可以说是家喻户晓了。价格实惠、质量稳定，一个月二三十软妹币，可以说是科学上网和稳定建站的首选之一。
+> 本篇就详细介绍下如何使用 搬瓦工 VPS 快速搭建 Shadowsocks （SS），搭建ss 科学上网。小白向教程，图文结合，让不太懂的朋友也可以快速 搭建ss 流畅访问 Google、YouTube、Instagram、Twitter 等。
+
+> 本教程适用于：
+**▲ITer、科技、极客等爱折腾人士**
+**▲学生、科研人员等学术需求人士**
+**▲Steam 等平台的海外吃鸡人士**
+**▲有海外业务的中小型博客、企**业
+
+-----------------------------
+
+> **搬瓦工最新官网**：[入口地址传送门](https://bwh8.net/)
+> **录入时间：2018年10月20日18:57:31**
+>很不幸的是，搬瓦工的bwh1.net已经打不开了，这次并不是CDN的问题了，而是被和谐了，被解析到了不同的IP，不过官方已经很快的做出了响应，有了最新的地址，请大家记住最新的搬瓦工地址
+>请大家关注我的知乎，有什么问题可以直接问我
+# 准备工作
+>本文会从 搬瓦工 VPS 的注册购买，到安装完成后的测试使用等，每一步都详细配图说明，让完全不懂的小白也可以顺利搭建完成。复制代码和填写信息时注意核对，大概需要 30 分钟。
+需要使用的资料：
+- [x] **注册**：邮箱（建议用网易邮箱163）
+- [x] **付款方式**：支付宝/Paypal/信用卡等
+
+
+#  1. 搬瓦工 VPS 购买 #
+
+**注意：**
+>**不要挂代理**！否则会被判为欺骗；
+直接点击文中购买链接，在购买过程中进行注册；
+（搬瓦工的验证码被墙，购买时注册不需要填验证码）注册时地址填**中国**；
+如果点击购买链接进入页面显示 “**Out of Stock**” 即为**售空**，可选择更高一级或其它套餐。
+
+# 1.1 选择套餐 #
+首推 CN2 GT 直连套餐，目前性价比最高，效果不错；追求质量的选择 CN2 GIA，价格比 GT 多些，但效果更好；效果最好的是香港套餐，双程 PCCW，价格略贵；普通 KVM 套餐效果一般，适合一般需求、稳定建站跑服务等。
+
+**优惠码**：BWH26FXH3HIQ，付款时使用可优惠 6.25% 。（重要！）
+	>**ps:后面专门讲如何获取搬瓦工网站上隐藏的优惠码**
+	
+**线路质量**：香港 KVM > CN2 GIA > CN2 GT > 普通 KVM
+**选择建议**：在预算范围内尽量选择质量最高的，免得买完不满意再折腾。优先选择 CN2 GT 和 GIA 套餐。为方便大家选择，下面列出了搬瓦工目前推荐高性价比套餐和简介。
+
+**推荐套餐**
+**新人必选方案** ：经济年付，学生白领人士必备
+>**方案一：[抢购]CN2 19刀特价促销款**    [**购买入口**](https://bandwagonhost.com/cart.php?a=confproduct&i=0)
+>硬盘：10GB SSD RAID-10
+内存：512 MB
+CPU：Intel Xeon * 1
+流量：500GB/月 (普通流量)
+机房：8机房,建议选USCA_2
+迁移：可迁移到CN2机房
+月付：无 (仅支持年付)
+半年付：无 (仅支持年付)
+年付：$19.99/年（约132元)
+>**方案二：[标准]CN2 29刀特价入门款**  [**购买入口**](https://bwh8.net/cart.php?a=confproduct&i=1)
+>硬盘：10GB SSD RAID-10
+内存：512 MB
+CPU：Intel Xeon * 1
+流量：500 GB/月 (CN2流量)
+机房：默认洛杉矶CN2 可换至8机房
+迁移：8机房任选，流量不变
+月付：无 (仅支持年付)
+半年付：无 (仅支持年付)
+年付：$29.99/年（约190元)
+>**方案三：[高配]CN2 标准配置款 20G**  **[购买入口](https://bwh8.net/cart.php?a=confproduct&i=2)**
+>硬盘：20GB SSD RAID-10
+内存：1024 MB
+CPU：Intel Xeon * 1
+流量：1000GB/月 (CN2流量)
+机房：默认洛杉矶CN2 可换至8机房
+迁移：8机房任选，流量不变
+月付：现已取消月付
+半年付：$29.99/年（约190元)
+年付：$49.99/年（约320元)
+
+
+-------------------------------------------
+（**注意**：年付会优惠大概两个月的金额；部分套餐可能会缺货；或太火了取消了月付方案，只有年付/季付）
+
+---------------------------------------------
+
+>**高端精选方案** ： 高速稳定，外贸营销人士必选
+**方案一：[新品]CN2 GIA企业级 20G**       **[购买入口](https://bwh8.net/aff.php?aff=31852&pid=72)**
+硬盘：20GB SSD RAID-10
+内存：1024 MB
+CPU：Intel Xeon * 2
+流量：1000GB/月 (高端GIA流量)
+机房：洛杉矶GIA高端机房
+迁移：不可迁移
+季付：$19.99/季
+半年付：$39.99/半年
+年付：$69.99/年
+企业级中美直连通道 助力外贸企业
+>**方案二：[香港]香港直连极速方案 40G**     **[购买入口](https://bwh8.net/cart.php?a=add&pid=62)**
+硬盘：40GB SSD RAID-10
+内存：2048 MB
+CPU：Intel Xeon * 1
+流量：200 GB/月 (高端香港流量)
+机房：香港MCX10机房
+迁移：不可迁移
+月付：$19.99/月
+半年付：$109.99/半年
+年付：$199.99/年
+香港直连VPS Ping值仅40毫秒！
+>**方案三：[香港]香港直连极速方案 80G**   **[购买入口](https://bwh8.net/cart.php?a=add&pid=63)**
+硬盘：80GB SSD RAID-10
+内存：4096 MB
+CPU：Intel Xeon * 1
+流量：300 GB/月 (高端香港流量)
+机房：香港MCX10机房
+迁移：不可迁移
+月付：$39.99/月
+半年付：$219.99/半年
+年付：399.99/年
+8机房随时迁移 1TB精品CN2流量
+
+
+## 1.2 购买图文教程 ##
+进入购买页面后，您需要核对方案配置以及选择时间期限。以年付$49.99的CN2机房为例，这里强烈建议选购年付方案(Annually)。
+- 第一，价格实惠，相当于买10个月送两个月;
+- 第二，年付IP较为稳定，而月付IP因流动性大，被X概率也大大增高。
+
+下图在比较重要的信息后面都标注了中文注释，我们选择Annually
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/1.png)
+
+
+注意，如果点进去的支付方案显示**out of stock**，说明该种方案的VPS**暂时缺货**。请选择其他方案的VPS。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/2.png)
+
+点击**Add to Cart(添加到购物车)**后，进入订单确认页面。这里可以输入**优惠码**得到优惠。如下图所示：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/3.png)
+
+
+搬瓦工的优惠码都是终身的优惠码，可以看到续费也是同价。核对我们选择的方案和价格，没有问题后点击**Checkout**结账。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/4.png)
+
+
+如果我们有过账户，直接点击**Click here to login登陆**以及付款就可以，如果还没有账户则需要注册账户。
+
+>**PS：**这里建议大家购买VPS的时候注册账户，因为直接注册账户的话，搬瓦工调用的是谷歌的验证码，国内是打不开的。
+
+>**注意**：我们不能用代理IP登陆注册账户，注册时国家需要真实(与网络环境的IP一致，中国IP必须填China)，否则会被显示为Fraud(欺诈)。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/5.png)
+
+ 如果选择支付宝(Alipay)付款的话，便会进入到这一步。
+
+ ![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/6.png)
+
+ 之后点击"**Pay Now**"，就会弹出支付宝支付窗口，进行支付即可。
+
+ ![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/7.png)
+
+支付成功后，便会得到以下的界面，其中VPS的SSH端口和root密码也会发送到您填写的邮箱中。点击**Click here to go to your Client Area**，进入管理页面。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/8.png)
+
+若没在登录状态，进入官网，右上角点击"**Client Area**"进行登录。依次点击"Service"->"My Service"就可以进入到已购买的VPS列表页。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/9.png)
+
+
+ 登陆搬瓦工账户后台，就可以看到已经成功买到的VPS主机，我们可以点击**KiwiVM Control Panel**登录管理面板进行VPS的管理和使用。
+
+ ![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/10.png)
+
+
+-----------------------------------------------
+
+
+**分割线**
+
+-----------------------------------------------
+
+>**如何在购买搬瓦工VPS的网页中获取优惠码**
+
+首先进入到购物车页面，并在空白处点鼠标右键，查看网页源码
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/11-1.png)
+
+
+然后，在源码中按下**Ctrl+F** ， 查找关键字：**promo code**   就可以看到最新可以使用的优惠码了。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/11.png)
+
+
+得到优惠码后就可以在结算的剩下最高6%的折扣。
+
+
+# 2 安装VPS详细步骤 #
+
+--------------------------------------------
+
+点击**KiwiVM Control Panel**登录管理面板，进行VPS的管理和使用。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/12.png)
+
+
+跳转到控制面板页面，我们先来熟悉一下这里展示的服务器信息。如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/13.png)
+
+服务器的准备工作
+安装CentOS系统
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/14.png)
+
+
+如果您的系统不是64位的CentOS 6，请按照下面的方法进行重新安装系统。其他系统安装shadowsocks的方法，恕不赘述。
+
+**关闭VPS**
+点击控制面板左侧的【**Main controls**】按钮，然后在右侧区域点击【**Actions**】行【**Stop**】按钮。如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/15.png)
+
+
+如果停止VPS成功了之后，会看到下图的界面：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/16.png)
+
+
+**重装OS**
+点击控制面板页面的左侧区域【**Install new OS**】按钮，然后在右侧区域中选择【**centos-6-x86_64**】，勾选下方【 **I agree that all existing data on my VPS will be lost.**】前面的选择框，然后点击【**Reload**】按钮开始重置系统。如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/17.png)
+
+如果点完按钮之后，出现如下图的界面：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/18.png)
+
+这是因为VPS没有停止。请执行上一步，关闭VPS。
+如果出现下图所示，说明重装系统已经完成。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/19.png)
+
+
+>上面框里面由数字和字母组成的字符串，>是VPS上root用户的密码，我们要记下来，
+>使用SSH的方式连接VPS时需要使用。>如果没记住也没有关系，我们后面会讲如何重置密码。下面框里面的数字，是端口号，连接VPS时也是需要用到的。不过，这个后期可以随时查，不用记。
+
+**修改VPS的root账户密码**
+**【方法一】**
+如果root密码没有记住，先使用下面的方法重置密码。如果您知道密码，可以跳过重置密码这一步，直接连接VPS修改密码。
+
+1、重置VPS密码
+点击控制面板左侧的【Root password modification】修改root账户密码按钮，再在右侧的区域点击【Generate and set new root password】按钮，生成和设置新的root密码，记录下root密码。如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/20.png)
+
+2、修改VPS密码
+使用ssh工具登录服务器，输入VPS的IP地址、端口号、用户名和密码。具体登录方法不在本次讲解的范围内，恕不赘述。
+
+然后输入shell命令
+
+```
+passwd
+```
+
+
+输入新的root密码，修改成功。如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/21.png)
+
+**【方法二】**
+
+点击控制面板左侧的【**Root shell - interactive**】按钮，再点击右侧区域的【**Launch**】按钮，浏览器会再弹出一个网页。在新的网页中输入shell命令passwd，点击回车键。如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/22.png)
+
+输入您要设置的新密码，这时输入密码的同时屏幕上不会显示你的输入。输入完成后，点击回车。如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/23.png)
+
+
+然后再输入一遍新密码，点击回车。修改密码成功，如下图：
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/24.png)
+
+
+# 3.安装Shadowsock(SS) #
+>由于之前搬瓦工曾经取消了一键安装Shadowsocks的按钮(部分现已恢复），我们特意给出了三种安装Shadowsocks的方法。方法一和方法二（没有一键安装SS按钮也可以）就是搬瓦工后台一键安装Shadowsocks的方法，更适合小白适用，简单快捷。方法三是采用SSH，用脚本方式安装Shadowsocks，更适合进阶用户使用，或者搬瓦工抽风取消一键安装的时候。还在犹豫什么？选择自己适用的方式，开始吧
+## 方法一：使用SSH工具安装SS ##
+Windows 推荐 xshell，Mac 可使用自带的终端。 
+Xshell 百度云[网盘链接](https://pan.baidu.com/share/init?surl=_1cZLhJX19CteMA90zluQw) 
+提取码: 78s8
+**Windows**
+安装 xshell，打开软件。
+点击 “文件” → “新建” → “连接”，输入 “名称” 和 “主机” （即 VPS IP）和 “端口号”。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/25.png)
+
+点击 “用户身份验证”，输入用户名（默认root）和密码。确认
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/26.png)
+
+连接 VPS，接受并保存密匙。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/27.png)
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/28.png)
+
+出现 root@vultr:~# 即连接成功。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/29.png)
+
+
+**Mac**
+打开终端，输入以下代码登录 VPS，其中 root 即用户名，将 ip 和端口号更改为 VPS 的 IP 和端口，回车。
+ssh -p 端口号 root@ip
+输入 yes 确认，粘贴密码，回车。需要提醒的是，密码输入时并不会显示出来，直接复制粘贴，回车即可。出现 root@vultr:~# 即连接成功。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/30.png)
+
+
+**开始安装ShadowSock(SS)**
+搬瓦工安装完成后默认系统为 Centos 6 x86 bbr，自带谷歌 BBR 加速优化，不用再额外安装。我们可以直接开始安装SS。
+
+首先更新并安装wget工具
+```
+yum install update
+```
+ShadowsocksR一键部署管理脚本：
+
+```
+yum -y install wget
+wget -N --no-check-certificate https://softs.fun/Bash/ssr.sh && chmod +x ssr.sh && bash ssr.sh
+```
+
+
+备用脚本：
+
+
+```
+yum -y install wget
+wget -N --no-check-certificate https://raw.githubusercontent.com/ToyoDAdoubi/doubi/master/ssr.sh && chmod +x ssr.sh && bash ssr.sh
+```
+复制上面的代码到VPS服务器里，按回车键，脚本会自动安装，以后只需要运行这个快捷命令就可以出现下图的界面进行设置，快捷管理命令为：bash ssr.sh
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/31.png)
+
+如上图出现管理界面后，输入数字1来安装SSR服务端。如果输入1后不能进入下一步，那么请退出xshell，重新连接vps服务器，然后输入快捷管理命令bash ssr.sh 再尝试。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/32.png)
+
+根据上图提示，依次输入自己想设置的端口和密码 (密码建议用复杂点的字母组合，端口号为40-65535之间的数字)，回车键用于确认
+
+注：关于端口的设置，总的网络总端口有6万多个，理论上可以任意设置。但是有的地区需要设置特殊的端口才有效，一些特殊的端口比如80、143、443、1433、3306、3389、8080。
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/33.png)
+
+
+如上图，选择想设置的加密方式，比如10，按回车键确认
+然后需要几分钟的安装过程，请耐心等待出现下面的画面！
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/34.png)
+
+请立即copy下来加以保存。
+
+上面的命令全部回车执行后，如果没有报错，即为执行成功，出现确认提示的时候，输入 y 后，回车即可。
+安装完成后，脚本提示如下：
+>Congratulations, Shadowsocks-Python server install completed!
+Your Server IP : IP地址
+Your Server Port : 端口
+Your Password : 密码
+Your Encryption Method: aes-256-cfb
+>Your QR Code: (For Shadowsocks Windows, OSX, Android and iOS clients)
+ss://YWVzLTsadsa206YnVkZHkyMDA4QDEwNC4yMjQuMTM1Ldfghdfgk=
+Your QR Code has been saved as a PNG file path:
+/root/shadowsocks_python_qr.png
+Welcome to visit: https://teddysun.com/486.html
+Enjoy it!
+
+记录保存好你的上述信息：Server IP、Server Port、Password、Encryption Method
+这时你的专属ss已经搭好了，开始使用吧。
+
+## 方法二：搬瓦工后台自带的SS（推荐） ##
+1、进入管理后台，点击进入控制面板
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/35.png)
+
+
+2、找到左侧的Shadowsocks server，出现如下画面，点击安装
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/36.png)
+
+
+3、安装很快，基本不到1分钟就可以完成，出现如下画面，点击返回
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/37.png)
+
+
+4、好了，就可以看到自己的SS信息了。如果想修改，还可以点后面的按钮修改。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/38.png)
+
+以上设置完毕，可以直接跳到第三步，设置SS客户端。
+
+## 方法三：直接输入网址的一键SS，类似方法二 ##
+1、如果后台没有一键SS按钮，我们只需要登陆到搬瓦工后台，然后在浏览器输入如下链接，并回车：
+
+https://kiwivm.64clouds.com/preloader.php?load=/main-exec.php?mode=extras_shadowsocks
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/39.png)
+
+
+然后就可以看到SS安装界面了，如下图
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/40.png)
+
+
+2、点击安装就可以了。安装很快，基本不到1分钟就可以完成，出现如下画面，点击返回
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/41.png)
+
+
+3、好了，就可以看到自己的SS信息了。如果想修改，还可以点后面的按钮修改。
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/42.png)
+
+
+# 4. 安装SSR客户端 #
+
+1、iphone下载wingy（免费的），app store里搜wingy（中国app store已经下架，可以换到美国账户下载）[wingy下载](https://itunes.apple.com/us/app/wingy-proxy-for-http-s-socks5/id1178584911?mt=8)
+
+2、windows[下载](https://github.com/shadowsocks/shadowsocks-windows/releases) 
+
+3、安卓客户端[下载](https://github.com/shadowsocks/shadowsocks-android/releases)
+
+4、Ubuntu客户端[安装教程](https://blog.csdn.net/bird3014/article/details/78570859)
+
+5、MAC客户端[下载](https://github.com/shadowsocks/ShadowsocksX-NG/releases/)
+
+如果你打不开上面几个下载链接说明，github被墙了，可以到我的百度盘下载
+百度盘分享快速入口：[**传送门**](https://pan.baidu.com/s/1dgiFuscorvn4D6EljzEr7w)
+**提取码**：i5k8
+
+**1、windows客户端配置**
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/43.png)
+
+右键任务栏托盘小飞机图标，“启动”，选择合适的代理模式：
+
+PAC：只代理国外网站，建议；
+全局：所有网站都通过代理。
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/44.png)
+
+手机和其它平台
+与电脑类似，填入对应连接信息，启用即可。不懂的选项保持默认。
+
+**2、ios客户端配置**
+
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/45.png)
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/46.png)
+
+3、MAC客户端
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/47.png)
+
+
+# 5.效果测试 #
+打开Google
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/49.png)
+
+打开instagram
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/50.png)
+
+打开YouTube 1080P 无卡顿
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/48.png)
+
+打开Twitter
+
+![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/51.png)
+
+
+# 结束 #
+
+至此，搬瓦工的ss搭建工作以及客户端配置已经完成。
