重新修改了主题文件

--- a/source/_posts/科学上网教程之搬瓦工.md
+++ b/source/_posts/科学上网教程之搬瓦工.md
@@ -1,14 +1,9 @@
 ---
 title: 科学上网教程之搬瓦工
 date: 2018-10-21 16:18:28
-tags:科学上网 | 翻墙 | 扶梯子 | VPS | Shadowsock | ss | VPN | 搬瓦工
+tags: [翻墙,扶梯子,VPS,Shadowsock,ss,VPN]
+categories: 科学上网
 ---
-
-# 搬瓦工 VPS 搭建 SHADOWSOCKS （SS） 科学上网图文教程 #
-2018/10/21 星期日 18:13:32 
-
-----------
-
 
 # 前言  #
 
