更换了图床链接

--- a/source/_posts/科学上网教程之搬瓦工.md
+++ b/source/_posts/科学上网教程之搬瓦工.md
@@ -6,7 +6,7 @@ categories: 科学上网
 ---
 
 
-![](http://pgwh8fe8h.bkt.clouddn.com/Shadowsocks.jpg)
+![](http://www.varygod.top/Shadowsocks.jpg)
 <!--more-->
 
 
@@ -134,21 +134,21 @@ CPU：Intel Xeon * 1
 
 下图在比较重要的信息后面都标注了中文注释，我们选择Annually
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/1.png)
+![enter image description here](http://www.varygod.top/1.png)
 
 
 注意，如果点进去的支付方案显示**out of stock**，说明该种方案的VPS**暂时缺货**。请选择其他方案的VPS。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/2.png)
+![enter image description here](http://www.varygod.top/2.png)
 
 点击**Add to Cart(添加到购物车)**后，进入订单确认页面。这里可以输入**优惠码**得到优惠。如下图所示：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/3.png)
+![enter image description here](http://www.varygod.top/3.png)
 
 
 搬瓦工的优惠码都是终身的优惠码，可以看到续费也是同价。核对我们选择的方案和价格，没有问题后点击**Checkout**结账。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/4.png)
+![enter image description here](http://www.varygod.top/4.png)
 
 
 如果我们有过账户，直接点击**Click here to login登陆**以及付款就可以，如果还没有账户则需要注册账户。
@@ -157,28 +157,28 @@ CPU：Intel Xeon * 1
 
 >**注意**：我们不能用代理IP登陆注册账户，注册时国家需要真实(与网络环境的IP一致，中国IP必须填China)，否则会被显示为Fraud(欺诈)。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/5.png)
+![enter image description here](http://www.varygod.top/5.png)
 
  如果选择支付宝(Alipay)付款的话，便会进入到这一步。
 
- ![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/6.png)
+ ![enter image description here](http://www.varygod.top/6.png)
 
  之后点击"**Pay Now**"，就会弹出支付宝支付窗口，进行支付即可。
 
- ![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/7.png)
+ ![enter image description here](http://www.varygod.top/7.png)
 
 支付成功后，便会得到以下的界面，其中VPS的SSH端口和root密码也会发送到您填写的邮箱中。点击**Click here to go to your Client Area**，进入管理页面。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/8.png)
+![enter image description here](http://www.varygod.top/8.png)
 
 若没在登录状态，进入官网，右上角点击"**Client Area**"进行登录。依次点击"Service"->"My Service"就可以进入到已购买的VPS列表页。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/9.png)
+![enter image description here](http://www.varygod.top/9.png)
 
 
  登陆搬瓦工账户后台，就可以看到已经成功买到的VPS主机，我们可以点击**KiwiVM Control Panel**登录管理面板进行VPS的管理和使用。
 
- ![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/10.png)
+ ![enter image description here](http://www.varygod.top/10.png)
 
 
 -----------------------------------------------
@@ -192,12 +192,12 @@ CPU：Intel Xeon * 1
 
 首先进入到购物车页面，并在空白处点鼠标右键，查看网页源码
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/11-1.png)
+![enter image description here](http://www.varygod.top/11-1.png)
 
 
 然后，在源码中按下**Ctrl+F** ， 查找关键字：**promo code**   就可以看到最新可以使用的优惠码了。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/11.png)
+![enter image description here](http://www.varygod.top/11.png)
 
 
 得到优惠码后就可以在结算的剩下最高6%的折扣。
@@ -209,17 +209,17 @@ CPU：Intel Xeon * 1
 
 点击**KiwiVM Control Panel**登录管理面板，进行VPS的管理和使用。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/12.png)
+![enter image description here](http://www.varygod.top/12.png)
 
 
 跳转到控制面板页面，我们先来熟悉一下这里展示的服务器信息。如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/13.png)
+![enter image description here](http://www.varygod.top/13.png)
 
 服务器的准备工作
 安装CentOS系统
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/14.png)
+![enter image description here](http://www.varygod.top/14.png)
 
 
 如果您的系统不是64位的CentOS 6，请按照下面的方法进行重新安装系统。其他系统安装shadowsocks的方法，恕不赘述。
@@ -227,27 +227,27 @@ CPU：Intel Xeon * 1
 **关闭VPS**
 点击控制面板左侧的【**Main controls**】按钮，然后在右侧区域点击【**Actions**】行【**Stop**】按钮。如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/15.png)
+![enter image description here](http://www.varygod.top/15.png)
 
 
 如果停止VPS成功了之后，会看到下图的界面：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/16.png)
+![enter image description here](http://www.varygod.top/16.png)
 
 
 **重装OS**
 点击控制面板页面的左侧区域【**Install new OS**】按钮，然后在右侧区域中选择【**centos-6-x86_64**】，勾选下方【 **I agree that all existing data on my VPS will be lost.**】前面的选择框，然后点击【**Reload**】按钮开始重置系统。如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/17.png)
+![enter image description here](http://www.varygod.top/17.png)
 
 如果点完按钮之后，出现如下图的界面：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/18.png)
+![enter image description here](http://www.varygod.top/18.png)
 
 这是因为VPS没有停止。请执行上一步，关闭VPS。
 如果出现下图所示，说明重装系统已经完成。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/19.png)
+![enter image description here](http://www.varygod.top/19.png)
 
 
 >上面框里面由数字和字母组成的字符串，>是VPS上root用户的密码，我们要记下来，
@@ -260,7 +260,7 @@ CPU：Intel Xeon * 1
 1、重置VPS密码
 点击控制面板左侧的【Root password modification】修改root账户密码按钮，再在右侧的区域点击【Generate and set new root password】按钮，生成和设置新的root密码，记录下root密码。如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/20.png)
+![enter image description here](http://www.varygod.top/20.png)
 
 2、修改VPS密码
 使用ssh工具登录服务器，输入VPS的IP地址、端口号、用户名和密码。具体登录方法不在本次讲解的范围内，恕不赘述。
@@ -274,22 +274,22 @@ passwd
 
 输入新的root密码，修改成功。如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/21.png)
+![enter image description here](http://www.varygod.top/21.png)
 
 **【方法二】**
 
 点击控制面板左侧的【**Root shell - interactive**】按钮，再点击右侧区域的【**Launch**】按钮，浏览器会再弹出一个网页。在新的网页中输入shell命令passwd，点击回车键。如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/22.png)
+![enter image description here](http://www.varygod.top/22.png)
 
 输入您要设置的新密码，这时输入密码的同时屏幕上不会显示你的输入。输入完成后，点击回车。如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/23.png)
+![enter image description here](http://www.varygod.top/23.png)
 
 
 然后再输入一遍新密码，点击回车。修改密码成功，如下图：
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/24.png)
+![enter image description here](http://www.varygod.top/24.png)
 
 
 # 3.安装Shadowsock(SS) #
@@ -302,22 +302,22 @@ Xshell 百度云[网盘链接](https://pan.baidu.com/share/init?surl=_1cZLhJX19C
 安装 xshell，打开软件。
 点击 “文件” → “新建” → “连接”，输入 “名称” 和 “主机” （即 VPS IP）和 “端口号”。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/25.png)
+![enter image description here](http://www.varygod.top/25.png)
 
 点击 “用户身份验证”，输入用户名（默认root）和密码。确认
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/26.png)
+![enter image description here](http://www.varygod.top/26.png)
 
 连接 VPS，接受并保存密匙。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/27.png)
+![enter image description here](http://www.varygod.top/27.png)
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/28.png)
+![enter image description here](http://www.varygod.top/28.png)
 
 出现 root@vultr:~# 即连接成功。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/29.png)
+![enter image description here](http://www.varygod.top/29.png)
 
 
 **Mac**
@@ -325,7 +325,7 @@ Xshell 百度云[网盘链接](https://pan.baidu.com/share/init?surl=_1cZLhJX19C
 ssh -p 端口号 root@ip
 输入 yes 确认，粘贴密码，回车。需要提醒的是，密码输入时并不会显示出来，直接复制粘贴，回车即可。出现 root@vultr:~# 即连接成功。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/30.png)
+![enter image description here](http://www.varygod.top/30.png)
 
 
 **开始安装ShadowSock(SS)**
@@ -352,25 +352,25 @@ wget -N --no-check-certificate https://raw.githubusercontent.com/ToyoDAdoubi/dou
 ```
 复制上面的代码到VPS服务器里，按回车键，脚本会自动安装，以后只需要运行这个快捷命令就可以出现下图的界面进行设置，快捷管理命令为：bash ssr.sh
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/31.png)
+![enter image description here](http://www.varygod.top/31.png)
 
 如上图出现管理界面后，输入数字1来安装SSR服务端。如果输入1后不能进入下一步，那么请退出xshell，重新连接vps服务器，然后输入快捷管理命令bash ssr.sh 再尝试。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/32.png)
+![enter image description here](http://www.varygod.top/32.png)
 
 根据上图提示，依次输入自己想设置的端口和密码 (密码建议用复杂点的字母组合，端口号为40-65535之间的数字)，回车键用于确认
 
 注：关于端口的设置，总的网络总端口有6万多个，理论上可以任意设置。但是有的地区需要设置特殊的端口才有效，一些特殊的端口比如80、143、443、1433、3306、3389、8080。
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/33.png)
+![enter image description here](http://www.varygod.top/33.png)
 
 
 如上图，选择想设置的加密方式，比如10，按回车键确认
 然后需要几分钟的安装过程，请耐心等待出现下面的画面！
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/34.png)
+![enter image description here](http://www.varygod.top/34.png)
 
 请立即copy下来加以保存。
 
@@ -395,23 +395,23 @@ Enjoy it!
 1、进入管理后台，点击进入控制面板
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/35.png)
+![enter image description here](http://www.varygod.top/35.png)
 
 
 2、找到左侧的Shadowsocks server，出现如下画面，点击安装
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/36.png)
+![enter image description here](http://www.varygod.top/36.png)
 
 
 3、安装很快，基本不到1分钟就可以完成，出现如下画面，点击返回
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/37.png)
+![enter image description here](http://www.varygod.top/37.png)
 
 
 4、好了，就可以看到自己的SS信息了。如果想修改，还可以点后面的按钮修改。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/38.png)
+![enter image description here](http://www.varygod.top/38.png)
 
 以上设置完毕，可以直接跳到第三步，设置SS客户端。
 
@@ -420,22 +420,22 @@ Enjoy it!
 
 https://kiwivm.64clouds.com/preloader.php?load=/main-exec.php?mode=extras_shadowsocks
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/39.png)
+![enter image description here](http://www.varygod.top/39.png)
 
 
 然后就可以看到SS安装界面了，如下图
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/40.png)
+![enter image description here](http://www.varygod.top/40.png)
 
 
 2、点击安装就可以了。安装很快，基本不到1分钟就可以完成，出现如下画面，点击返回
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/41.png)
+![enter image description here](http://www.varygod.top/41.png)
 
 
 3、好了，就可以看到自己的SS信息了。如果想修改，还可以点后面的按钮修改。
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/42.png)
+![enter image description here](http://www.varygod.top/42.png)
 
 
 # 4. 安装SSR客户端 #
@@ -457,7 +457,7 @@ https://kiwivm.64clouds.com/preloader.php?load=/main-exec.php?mode=extras_shadow
 **1、windows客户端配置**
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/43.png)
+![enter image description here](http://www.varygod.top/43.png)
 
 右键任务栏托盘小飞机图标，“启动”，选择合适的代理模式：
 
@@ -465,7 +465,7 @@ PAC：只代理国外网站，建议；
 全局：所有网站都通过代理。
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/44.png)
+![enter image description here](http://www.varygod.top/44.png)
 
 手机和其它平台
 与电脑类似，填入对应连接信息，启用即可。不懂的选项保持默认。
@@ -473,31 +473,31 @@ PAC：只代理国外网站，建议；
 **2、ios客户端配置**
 
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/45.png)
+![enter image description here](http://www.varygod.top/45.png)
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/46.png)
+![enter image description here](http://www.varygod.top/46.png)
 
 3、MAC客户端
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/47.png)
+![enter image description here](http://www.varygod.top/47.png)
 
 
 # 5.效果测试 #
 打开Google
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/49.png)
+![enter image description here](http://www.varygod.top/49.png)
 
 打开instagram
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/50.png)
+![enter image description here](http://www.varygod.top/50.png)
 
 打开YouTube 1080P 无卡顿
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/48.png)
+![enter image description here](http://www.varygod.top/48.png)
 
 打开Twitter
 
-![enter image description here](http://pgwh8fe8h.bkt.clouddn.com/51.png)
+![enter image description here](http://www.varygod.top/51.png)
 
 
 # 结束 #
